k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-sample
  name: python-sample
  namespace: parth-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-sample
  template:
    metadata:
      labels:
        app: python-sample
        deployment: python-sample
    spec:
      containers:
      - image: innovative-quay-quay-registry.apps.parth-rosa-acm.orfh.p1.openshiftapps.com/quayadmin/pipeline-demo:f1ec23d0d30a1b80f4321a1e59a31fe79ad10177
      #- image: image-registry.openshift-image-registry.svc:5000/pipelines-demo/python-sample:latest
        imagePullPolicy: Always
        name: python-sample
